# impellerpy

./: .aider.conf.yml  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  README_PYPI.md  impellerpy.sublime-project  index.html  justfile  manylinux.Dockerfile  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  reference.html  usage.html  vcpkg.json
.claude/agent-memory/ci-rules-auditor/: MEMORY.md  project_build_ci_conventions.md
.claude/agent-memory/docs-auditor/: MEMORY.md  project_api_patterns.md  project_structure.md
.claude/agents/: ci-rules-auditor.md  docs-auditor.md
.claude/rules/: auditing.md
.github/workflows/: build.yml  documentation.yml
docs/: index.md  reference.md  usage.md
search/: search_index.js  search_index.json
src/: CMakeLists.txt  bindings.cc  bindings.h  cocoa.h  cocoa.mm  context.cc  context.h  impellerpy.cc  platform.cc  platform.h  platform.mm  setup.cc  setup.h  window.cc  window.h
src/impeller/: __init__.py  impeller.py  impellerpy.pyi
src/impellerpy/: __init__.py  impeller.py  impellerpy.pyi
tests/: test_color_filter.py  test_color_source.py  test_context.py  test_display_list_builder.py  test_image_filter.py  test_impeller.py  test_mask_filter.py  test_paint.py  test_paragraph_builder.py  test_path_builder.py  test_structs.py  test_surface.py  test_texture.py  test_typography.py  test_window.py
