[project]
name = "impellerpy"
version = "0.1.0"
description = "Python bindings for Impeller, Flutters rendering engine."
readme = "README.md"
# This is the version that nanobind uses (via the implicit python dependency).
requires-python = "~=3.12"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "build/src"
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "pillow>=11.2.1",
    "pyglm>=2.8.2",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "F403", # Unable to detect undefined names
    "F405", # Defined from * imports
    "E722" # Do not use bare except
]

