[project]
name = "impellerpy"
version = "0.1.0"
description = "Python bindings for Impeller, Flutters rendering engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "pillow>=11.2.1",
    "pyglm>=2.8.2",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "F403", # Unable to detect undefined names
    "F405", # Defined from * imports
    "E722" # Do not use bare except
]

[build-system]
requires = [
    "scikit-build-core >=0.10",
    "nanobind >=1.3.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]

# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "skbuild/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# test-skip="*"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"
