[project]
name = "impellerpy"
version = "0.1.2"
description = "Python bindings for Impeller, Flutters rendering engine."
readme = "README_PYPI.md"
requires-python = ">=3.12"
authors = [
    { name = "Chinmay Garde", email = "chinmaygarde@gmail.com" },
]
dependencies = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: GPU",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[dependency-groups]
dev = [
    "cibuildwheel>=2.23.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings-python>=1.16.10",
    "pillow>=11.2.1",
    "pyglm>=2.8.2",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "twine>=6.1.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "F403", # Unable to detect undefined names
    "F405", # Defined from * imports
    "E722" # Do not use bare except
]

[build-system]
requires = [
    "scikit-build-core >=0.10",
    "nanobind >=1.3.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]

# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = ["pytest", "pyglm"]

test-skip="*"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y cmake libX11-devel libXrandr-devel libXinerama-devel libXi-devel libXcursor-devel mesa-libGL-devel libXdamage-devel libudev-devel wayland-devel libxkbcommon-devel"
]
